--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <title>What's Up? A to-do list</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Public+Sans&display=swap" rel="stylesheet">
-
+<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
   </head>
   <body>
 
@@ -13,12 +13,16 @@
 <img class='logo' src="logo.png" alt="logo">
 <div class="wrap">
 <div class='input'>
-  <input id='newtask' type="text" name="enter" placeholder="Enter your task here ... ">
+  <input id='newTask' type="text" placeholder="Enter your task here ... ">
   <button id='add' type="button" name="add">Add</button>
 </div>
 <div class="todo">
 <h2>To-do</h2>
+<ul id='list1'>
+</ul>
 </div>
 </div>
   </body>
+
+  <script src="app.js"></script>
 </html>
